# medctl

./: .env.example  .gitignore  Cargo.toml  README.md  service-account-mock.json.mock
src/: arg.rs  commands.rs  main.rs
src/commands/: log.rs
