[package]
name = "medctl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
google-sheets4 = "6"
chrono = "0.4"
dotenv = "0.15.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.2.1"
asciigraph = "0.10.1"
ratatui = "0.29.0"
crossterm = "0.29.0"
